updated the docker